# usbd-fs-stm32-tests

./: .gitignore  CMakeLists.txt  README.md
3d-models/: pcb-rpi-support.scad  pcb-rpi-support.stl  rpi-base.scad  rpi-base.stl  rpi-holder.scad  rpi-holder.stl
common/: serial-protocol.h
firmware/: CMakeLists.txt  STM32F042x6.ld  main-f042.c  main-g431.c  main.c
firmware/include/: hal.h  test-helpers.h  test.h
firmware/tests/: blink.c
pcb/: fp-lib-table  usbd-fs-stm32-test-board.kicad_pcb  usbd-fs-stm32-test-board.kicad_pro  usbd-fs-stm32-test-board.kicad_sch
pcb/lib/: LICENSE
pcb/lib/3d-models/: C_TDK_Fx28.FCStd  C_TDK_Fx28.step  R_YAGEO_MFR-25FTE52_Horizontal.FCStd  R_YAGEO_MFR-25FTE52_Horizontal.step
pcb/lib/custom.pretty/: C_TDK_FA28.kicad_mod  NUCLEO-32.kicad_mod  R_YAGEO_MFR-25FTE52_Horizontal.kicad_mod  USB_Mini-B_PTH.kicad_mod
runner/: CMakeLists.txt  go.mod  main.c  main.go  mcu.c  mcu.h  runner.c  runner.h
runner/internal/firmware/: firmware.go
runner/internal/serial/: serial.go
runner/internal/stlink/: stlink.go
runner/tests/: blink.go  init.go
